--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@ overflow: hidden;
   width: 50px;
   height: 50px;
   font-size: 50px;
-  animation: tic 0.3s infinite;
-
+  animation: tic 0.3s infinite linear;
 }
 
 #greeting{
